# nwsc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements.txt
docs/: configuration.md  endpoint_coverage.md  system_design.md
nwsc/: api_temp.py  config.py  decorators.py  main.py  render.py
nwsc/api/: __init__.py  api_request.py  conversion.py  conversions.py  geocode.py  get_alerts.py  get_aviation.py  get_enums.py  get_glossary.py  get_location.py  get_offices.py  get_products.py  get_radar.py  get_stations.py  get_weather.py  get_zones.py
nwsc/model/: __init__.py  alerts.py  aviation.py  locations.py  nws_item.py  offices.py  products.py  radar.py  stations.py  weather.py  zones.py
nwsc/render/: decorators.py  pprint_raw.py  pretty_print.py  rich_print.py
nwsc/repository/: base.py  csv.py  csv_repository.py  in_memory.py  in_memory_repository.py  json.py  json_repository.py  memory.py  sqlite.py  sqlite_repository.py
old/: cache.py  demo_all_spinners.py  demo_live_display.py  demo_progress.py  demo_spinner.py
resources/rich_demos/: cache.py  demo_all_spinners.py  demo_spinner.py
tests/: hourly_forecast_sample.json
tests/test_data/: api_res_hourly_forecast.json  nws_raw_alert_counts.json  nws_raw_alerts.json  nws_raw_atsu_date_sigmets.json  nws_raw_atsu_sigmets.json  nws_raw_cwa.json  nws_raw_cwas.json  nws_raw_cwsu.json  nws_raw_forecast_extended.json  nws_raw_forecast_hourly.json  nws_raw_local_stations_data.json  nws_raw_location_data.json  nws_raw_observations.json  nws_raw_observations_all.json  (+26 more)
(+49 files in other folders)
